@@ -16,39 +16,31 @@ import java.util.Optional;
 
 public class ProductDAO {
 
-    private static final String PRODUCT_COLUMNS = """
-            p.product_id, p.created_by, p.category_id, c.name AS category_name,
-            p.name, p.description, p.brand, p.model_code, p.release_year, p.product_condition,
-            p.import_type, p.origin_country, p.warranty_months, p.warranty_provider,
-            p.status, p.view_count, p.rating, p.sold_quantity, p.is_featured,
-            p.created_at, p.updated_at, vs.min_price, COALESCE(vs.total_stock, 0) AS total_stock,
-            COALESCE(vs.variant_count, 0) AS variant_count,
-            pi.file_path AS primary_image_url
-            """;
+    private static final String PRODUCT_COLUMNS =
+            "p.product_id, p.created_by, p.category_id, c.name AS category_name, " +
+            "p.name, p.description, p.brand, p.model_code, p.release_year, p.product_condition, " +
+            "p.import_type, p.origin_country, p.warranty_months, p.warranty_provider, " +
+            "p.status, p.view_count, p.rating, p.sold_quantity, p.is_featured, " +
+            "p.created_at, p.updated_at, vs.min_price, COALESCE(vs.total_stock, 0) AS total_stock, " +
+            "COALESCE(vs.variant_count, 0) AS variant_count, " +
+            "pi.file_path AS primary_image_url";
 
-    private static final String PRODUCT_FROM = """
-            FROM products p
-            JOIN categories c ON c.category_id = p.category_id
-            LEFT JOIN (
-                SELECT
-                    product_id,
-                    MIN(CASE WHEN is_active = 1 THEN price END) AS min_price,
-                    SUM(CASE WHEN is_active = 1 THEN stock_quantity ELSE 0 END) AS total_stock,
-                    COUNT(*) AS variant_count
-                FROM product_variants
-                GROUP BY product_id
-            ) vs ON vs.product_id = p.product_id
-            LEFT JOIN product_images pi ON pi.product_id = p.product_id AND pi.is_primary = 1
-            WHERE 1 = 1
-            """;
+    private static final String PRODUCT_FROM =
+            "FROM products p " +
+            "JOIN categories c ON c.category_id = p.category_id " +
+            "LEFT JOIN ( " +
+            "    SELECT product_id, " +
+            "           MIN(CASE WHEN is_active = 1 THEN price END) AS min_price, " +
+            "           SUM(CASE WHEN is_active = 1 THEN stock_quantity ELSE 0 END) AS total_stock, " +
+            "           COUNT(*) AS variant_count " +
+            "    FROM product_variants " +
+            "    GROUP BY product_id " +
+            ") vs ON vs.product_id = p.product_id " +
+            "LEFT JOIN product_images pi ON pi.product_id = p.product_id AND pi.is_primary = 1 " +
+            "WHERE 1 = 1 ";
 
-    /** Lấy danh sách sản phẩm kèm giá thấp nhất, tồn kho và số biến thể theo filter/sort/phân trang. */
-    public List<Product> findAll(String keyword, Integer categoryId, String status, String sort, int page, int pageSize)
-            throws SQLException {
-        StringBuilder sql = new StringBuilder("SELECT ")
-                .append(PRODUCT_COLUMNS)
-                .append(' ')
-                .append(PRODUCT_FROM);
+    public List<Product> findAll(String keyword, Integer categoryId, String status, String sort, int page, int pageSize) throws SQLException {
+        StringBuilder sql = new StringBuilder("SELECT ").append(PRODUCT_COLUMNS).append(" ").append(PRODUCT_FROM);
         List<Object> params = new ArrayList<>();
         appendFilters(sql, params, keyword, categoryId, status);
         sql.append(" ORDER BY ").append(resolveOrderBy(sort)).append(" LIMIT ? OFFSET ?");
@@ -67,7 +59,6 @@ public class ProductDAO {
         }
     }
 
-    /** Đếm số sản phẩm thỏa keyword, danh mục và trạng thái. */
     public int countAll(String keyword, Integer categoryId, String status) throws SQLException {
         StringBuilder sql = new StringBuilder("SELECT COUNT(*) FROM products p WHERE 1 = 1");
         List<Object> params = new ArrayList<>();
@@ -84,10 +75,8 @@ public class ProductDAO {
         }
     }
 
-    /** Tìm một sản phẩm theo ID, trả về Optional.empty nếu không tồn tại. */
     public Optional<Product> findById(int productId) throws SQLException {
-        String sql = "SELECT " + PRODUCT_COLUMNS + ' ' + PRODUCT_FROM + " AND p.product_id = ?";
-
+        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM + " AND p.product_id = ?";
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setInt(1, productId);
             try (ResultSet resultSet = statement.executeQuery()) {
@@ -99,20 +88,16 @@ public class ProductDAO {
         }
     }
 
-    /** Thêm sản phẩm mới vào bảng products và trả về product_id được sinh ra. */
     public int insert(Product product) throws SQLException {
-        String sql = """
-                INSERT INTO products (
-                    created_by, category_id, name, description, brand, model_code, release_year,
-                    product_condition, import_type, origin_country, warranty_months, warranty_provider,
-                    status, is_featured
-                ) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
-                """;
+        String sql = "INSERT INTO products (" +
+                     "created_by, category_id, name, description, brand, model_code, release_year, " +
+                     "product_condition, import_type, origin_country, warranty_months, warranty_provider, " +
+                     "status, is_featured" +
+                     ") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)";
 
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql, Statement.RETURN_GENERATED_KEYS)) {
             setProductMutationParams(statement, product);
             statement.executeUpdate();
-
             try (ResultSet generatedKeys = statement.getGeneratedKeys()) {
                 if (generatedKeys.next()) {
                     return generatedKeys.getInt(1);
@@ -122,15 +107,11 @@ public class ProductDAO {
         }
     }
 
-    /** Cập nhật thông tin chính của sản phẩm theo product_id. */
     public boolean update(Product product) throws SQLException {
-        String sql = """
-                UPDATE products
-                SET category_id = ?, name = ?, description = ?, brand = ?, model_code = ?, release_year = ?,
-                    product_condition = ?, import_type = ?, origin_country = ?, warranty_months = ?,
-                    warranty_provider = ?, status = ?, is_featured = ?
-                WHERE product_id = ?
-                """;
+        String sql = "UPDATE products SET category_id = ?, name = ?, description = ?, brand = ?, model_code = ?, release_year = ?, " +
+                     "product_condition = ?, import_type = ?, origin_country = ?, warranty_months = ?, " +
+                     "warranty_provider = ?, status = ?, is_featured = ? " +
+                     "WHERE product_id = ?";
 
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setInt(1, product.getCategoryId());
@@ -151,10 +132,8 @@ public class ProductDAO {
         }
     }
 
-    /** Cập nhật riêng trạng thái sản phẩm mà không đụng các trường khác. */
     public boolean updateStatus(int productId, String status) throws SQLException {
         String sql = "UPDATE products SET status = ? WHERE product_id = ?";
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, status);
             statement.setInt(2, productId);
@@ -162,10 +141,8 @@ public class ProductDAO {
         }
     }
 
-    /** Kiểm tra tên sản phẩm đã tồn tại hay chưa khi tạo mới. */
     public boolean existsByName(String name) throws SQLException {
         String sql = "SELECT 1 FROM products WHERE name = ? LIMIT 1";
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, name);
             try (ResultSet resultSet = statement.executeQuery()) {
@@ -174,10 +151,8 @@ public class ProductDAO {
         }
     }
 
-    /** Kiểm tra tên có trùng với sản phẩm khác khi cập nhật hay không. */
     public boolean existsByNameForOtherProduct(String name, int productId) throws SQLException {
         String sql = "SELECT 1 FROM products WHERE name = ? AND product_id <> ? LIMIT 1";
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, name);
             statement.setInt(2, productId);
@@ -187,14 +162,11 @@ public class ProductDAO {
         }
     }
 
-    /** Kiểm tra mã model đã tồn tại hay chưa khi tạo mới. */
     public boolean existsByModelCode(String modelCode) throws SQLException {
-        if (modelCode == null || modelCode.isBlank()) {
+        if (modelCode == null || modelCode.trim().isEmpty()) {
             return false;
         }
-
         String sql = "SELECT 1 FROM products WHERE model_code = ? LIMIT 1";
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, modelCode);
             try (ResultSet resultSet = statement.executeQuery()) {
@@ -203,14 +175,11 @@ public class ProductDAO {
         }
     }
 
-    /** Kiểm tra mã model có trùng với sản phẩm khác khi cập nhật hay không. */
     public boolean existsByModelCodeForOtherProduct(String modelCode, int productId) throws SQLException {
-        if (modelCode == null || modelCode.isBlank()) {
+        if (modelCode == null || modelCode.trim().isEmpty()) {
             return false;
         }
-
         String sql = "SELECT 1 FROM products WHERE model_code = ? AND product_id <> ? LIMIT 1";
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
             statement.setString(1, modelCode);
             statement.setInt(2, productId);
@@ -220,58 +189,38 @@ public class ProductDAO {
         }
     }
 
-    /** Gắn các điều kiện filter vào SQL danh sách sản phẩm. */
     private void appendFilters(StringBuilder sql, List<Object> params, String keyword, Integer categoryId, String status) {
         appendBaseFilters(sql, params, keyword, categoryId, status);
     }
 
-    /** Gắn điều kiện keyword, categoryId và status dùng chung cho list/count. */
     private void appendBaseFilters(StringBuilder sql, List<Object> params, String keyword, Integer categoryId, String status) {
-        if (keyword != null && !keyword.isBlank()) {
+        if (keyword != null && !keyword.trim().isEmpty()) {
             sql.append(" AND (LOWER(p.name) LIKE ? OR LOWER(COALESCE(p.model_code, '')) LIKE ?)");
             String likeKeyword = "%" + keyword.trim().toLowerCase() + "%";
             params.add(likeKeyword);
             params.add(likeKeyword);
         }
-
         if (categoryId != null && categoryId > 0) {
             sql.append(" AND p.category_id = ?");
             params.add(categoryId);
         }
-
-        if (status != null && !status.isBlank()) {
+        if (status != null && !status.trim().isEmpty()) {
             sql.append(" AND p.status = ?");
             params.add(status.trim().toUpperCase());
         }
     }
 
-    /** Chuyển sort key thành ORDER BY cố định để tránh chèn SQL động không kiểm soát. */
     private String resolveOrderBy(String sort) {
-        if ("oldest".equals(sort)) {
-            return "p.product_id ASC";
-        }
-        if ("name_asc".equals(sort)) {
-            return "p.name ASC, p.product_id ASC";
-        }
-        if ("name_desc".equals(sort)) {
-            return "p.name DESC, p.product_id DESC";
-        }
-        if ("price_asc".equals(sort)) {
-            return "COALESCE(vs.min_price, 0) ASC, p.product_id ASC";
-        }
-        if ("price_desc".equals(sort)) {
-            return "COALESCE(vs.min_price, 0) DESC, p.product_id DESC";
-        }
-        if ("stock_asc".equals(sort)) {
-            return "COALESCE(vs.total_stock, 0) ASC, p.product_id ASC";
-        }
-        if ("stock_desc".equals(sort)) {
-            return "COALESCE(vs.total_stock, 0) DESC, p.product_id DESC";
-        }
+        if ("oldest".equals(sort)) return "p.product_id ASC";
+        if ("name_asc".equals(sort)) return "p.name ASC, p.product_id ASC";
+        if ("name_desc".equals(sort)) return "p.name DESC, p.product_id DESC";
+        if ("price_asc".equals(sort)) return "COALESCE(vs.min_price, 0) ASC, p.product_id ASC";
+        if ("price_desc".equals(sort)) return "COALESCE(vs.min_price, 0) DESC, p.product_id DESC";
+        if ("stock_asc".equals(sort)) return "COALESCE(vs.total_stock, 0) ASC, p.product_id ASC";
+        if ("stock_desc".equals(sort)) return "COALESCE(vs.total_stock, 0) DESC, p.product_id DESC";
         return "p.product_id DESC";
     }
 
-    /** Bind dữ liệu sản phẩm vào PreparedStatement khi insert. */
     private void setProductMutationParams(PreparedStatement statement, Product product) throws SQLException {
         setNullableInteger(statement, 1, product.getCreatedBy());
         statement.setInt(2, product.getCategoryId());
@@ -289,7 +238,6 @@ public class ProductDAO {
         statement.setBoolean(14, product.isFeatured());
     }
 
-    /** Map ResultSet từ câu SELECT sản phẩm sang entity Product. */
     private Product mapProduct(ResultSet resultSet) throws SQLException {
         Product product = new Product();
         product.setProductId(resultSet.getInt("product_id"));
@@ -322,23 +270,20 @@ public class ProductDAO {
         return product;
     }
 
-    /** Bind danh sách tham số vào PreparedStatement theo thứ tự đã build SQL. */
     private void bindParams(PreparedStatement statement, List<Object> params) throws SQLException {
         for (int i = 0; i < params.size(); i++) {
             statement.setObject(i + 1, params.get(i));
         }
     }
 
-    /** Bind chuỗi nullable vào PreparedStatement. */
     private void setNullableString(PreparedStatement statement, int index, String value) throws SQLException {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             statement.setNull(index, java.sql.Types.VARCHAR);
             return;
         }
         statement.setString(index, value);
     }
 
-    /** Bind số nguyên nullable vào PreparedStatement. */
     private void setNullableInteger(PreparedStatement statement, int index, Integer value) throws SQLException {
         if (value == null) {
             statement.setNull(index, java.sql.Types.INTEGER);
@@ -347,7 +292,6 @@ public class ProductDAO {
         statement.setInt(index, value);
     }
 
-    /** Chuyển Timestamp từ JDBC sang LocalDateTime cho entity. */
     private java.time.LocalDateTime toLocalDateTime(Timestamp timestamp) {
         if (timestamp == null) {
             return null;
@@ -355,43 +299,11 @@ public class ProductDAO {
         return timestamp.toLocalDateTime();
     }
 
-    // 1. Lấy sản phẩm nổi bật
     public List<Product> findFeaturedProducts(int limit) throws SQLException {
-        // Nối SQL: Lấy các cột + Từ các bảng + Thêm điều kiện Nổi bật & Đang bán + Giới hạn số lượng
-        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM
-                + " AND p.is_featured = 1 AND p.status = 'ACTIVE' LIMIT ?";
-
+        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM + " AND p.is_featured = 1 AND p.status = 'ACTIVE' LIMIT ?";
         List<Product> products = new ArrayList<>();
-
-        // Mở kết nối Database
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
-
-            // Truyền giá trị cho dấu ? (limit)
             statement.setInt(1, limit);
-
-            // Thực thi truy vấn
-            try (ResultSet resultSet = statement.executeQuery()) {
-                // Duyệt qua từng dòng kết quả
-                while (resultSet.next()) {
-                    products.add(mapProduct(resultSet)); // mapProduct đã tự động xử lý lấy primary_image_url
-                }
-            }
-        }
-        return products;
-    }
-
-    // 2. Lấy sản phẩm mới nhất
-    public List<Product> findNewProducts(int limit) throws SQLException {
-        // Nối SQL: Sắp xếp theo năm phát hành mới nhất, nếu trùng năm thì lấy product_id lớn nhất (mới thêm vào)
-        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM
-                + " AND p.status = 'ACTIVE' ORDER BY p.release_year DESC, p.product_id DESC LIMIT ?";
-
-        List<Product> products = new ArrayList<>();
-
-        try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
-
-            statement.setInt(1, limit);
-
             try (ResultSet resultSet = statement.executeQuery()) {
                 while (resultSet.next()) {
                     products.add(mapProduct(resultSet));
@@ -401,18 +313,25 @@ public class ProductDAO {
         return products;
     }
 
-    // 3. Lấy sản phẩm bán chạy nhất
-    public List<Product> findBestSellerProducts(int limit) throws SQLException {
-        // Nối SQL: Sắp xếp theo số lượng đã bán (sold_quantity) giảm dần
-        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM
-                + " AND p.status = 'ACTIVE' ORDER BY p.sold_quantity DESC, p.product_id DESC LIMIT ?";
-
+    public List<Product> findNewProducts(int limit) throws SQLException {
+        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM + " AND p.status = 'ACTIVE' ORDER BY p.release_year DESC, p.product_id DESC LIMIT ?";
         List<Product> products = new ArrayList<>();
-
         try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
-
             statement.setInt(1, limit);
+            try (ResultSet resultSet = statement.executeQuery()) {
+                while (resultSet.next()) {
+                    products.add(mapProduct(resultSet));
+                }
+            }
+        }
+        return products;
+    }
 
+    public List<Product> findBestSellerProducts(int limit) throws SQLException {
+        String sql = "SELECT " + PRODUCT_COLUMNS + " " + PRODUCT_FROM + " AND p.status = 'ACTIVE' ORDER BY p.sold_quantity DESC, p.product_id DESC LIMIT ?";
+        List<Product> products = new ArrayList<>();
+        try (Connection connection = DBConnection.getConnection(); PreparedStatement statement = connection.prepareStatement(sql)) {
+            statement.setInt(1, limit);
             try (ResultSet resultSet = statement.executeQuery()) {
                 while (resultSet.next()) {
                     products.add(mapProduct(resultSet));
